@@ -1,6 +1,10 @@
-# react-native-geckoview [![npm](https://badge.fury.io/js/react-native-geckoview.svg)](https://www.npmjs.com/package/react-native-geckoview)
+# react-native-geckowebview-and-adblock
+
+Forked from [react-native-geckowebview-and-adblock](https://github.com/sunnylqm/react-native-geckoview)
 
 Based on [GeckoView](https://github.com/mozilla/geckoview). Just a proof of concept.
+
+Android only
 
 ## Getting started
 
@@ -30,4 +34,38 @@ allprojects {
 import GeckoView from 'react-native-geckoview';
 
 <GeckoView source={{ uri: 'https://www.google.com' }} />;
+```
+## Adblock with ublock origin
+Download a "firefox.signed.xpi " from [here](https://github.com/gorhill/uBlock/releases) , rename it to zip, and extract it.
+place the contents in android/app/src/main/assets/signed, so that the manifest.json ends up in android/app/src/main/assets/signed/manifest.json.
+
+You should ocasionally update this so you get all the latest adblocking goodness.
+
+on android/app/build.gradle
+
+add the following under `defaultConfig { ` .  | This is because the adblock folder contains folders starting with underscore that are removed if we don't put this.
+```
+aaptOptions {
+            ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
+        }
+```
+
+## FAQ
+### Android build fails with "Java heap space" error
+
+Make your gradle.properties look like the following:
+```
+android.useAndroidX=true
+android.enableJetifier=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+```
+And add the following in your app/build.gradle under the android task:
+
+```
+android {
+
+  dexOptions {
+    javaMaxHeapSize "4g"
+  }
+}  
 ```
